--- a/about.html
+++ b/about.html
@@ -68,14 +68,14 @@
                 </p>
             </div>
             <div class="about-section__image">
-                <img src="/img/hurry-businessman-svgrepo-com.svg" alt="Наша миссия">
+                <img src="/img/mission.svg" alt="Наша миссия">
             </div>
         </section>
 
         <!-- Второй блок -->
         <section class="about-section">
             <div class="about-section__image">
-                <img src="/img/quality-supervision-svgrepo-com.svg" alt="Наша команда">
+                <img src="/img/ourteam.svg" alt="Наша команда">
             </div>
             <div class="about-section__text">
                 <h2>Наша команда</h2>
@@ -95,7 +95,7 @@
                 </p>
             </div>
             <div class="about-section__image">
-                <img src="/img/accuracy-aim-competition-svgrepo-com.svg" alt="Наши достижения">
+                <img src="/img/achievements.svg" alt="Наши достижения">
             </div>
         </section>
 
